--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: julia
 os:
     - linux
+arch:
+  - amd64
 julia:
     - nightly
     - 1.3
+    - 1.4
 notifications:
     email: false
 before_install:
@@ -11,4 +14,6 @@ before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y libmps3-dev
 script:
- - julia --color=yes -e 'using Pkg; Pkg.test(coverage=false)'
+ - julia --color=yes -e 'using Pkg; Pkg.test(; coverage=true)'
+after_success:
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder());Codecov.submit(Codecov.process_folder())';
