--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,29 @@
 language: julia
+
 os:
     - linux
+
 arch:
   - amd64
+
 julia:
     - nightly
     - 1.3
     - 1.4
+
 notifications:
     email: false
+
+coveralls: true
+
 before_install:
     - sudo apt-add-repository -y ppa:leo.robol/mpsolve
     - sudo apt-get update -qq
-    - sudo apt-get install -y libmps3-dev
+    - sudo apt-get install -y libmps3 libmps3-dev
+
 script:
- - julia --color=yes -e 'using Pkg; Pkg.test(; coverage=true)'
+ - julia --color=yes -e 'using Pkg; Pkg.test(; coverage=true)';
+
 after_success:
-  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder());Codecov.submit(Codecov.process_folder())';
+  - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage;
+              Coveralls.submit(Coveralls.process_folder())'
